--- a/public/index.html
+++ b/public/index.html
@@ -559,7 +559,7 @@ popoto.graph.USE_FIT_TEXT = true;
 
     driver.verifyConnectivity().then(function () {
         // Start the generation using parameter as root label of the query.
-        popoto.start("Notify customer to improve customer experience");
+        popoto.start("CEO Dashboard");
     }).catch(function (error) {
         document.getElementById("modal").style.display = "block";
         
